force-app/main/default/objects/Opportunity/fields/Prio_Score_of_Targetable_Listings__c.field-meta.xml
<CustomField>
    <fullName>Prio_Score_of_Targetable_Listings__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Prio Score of Targetable Listings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>