force-app/main/default/objects/Opportunity/fields/Product_Models__c.field-meta.xml
<CustomField>
    <fullName>Product_Models__c</fullName>
    <label>Product Models</label>
    <type>TextArea</type>
</CustomField>