force-app/main/default/objects/Opportunity/fields/Products_in_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Products_in_Negotiation__c</fullName>
    <label>Products in Negotiation</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Stage__c</field>
        <operation>equals</operation>
        <value>Negotiation</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>