force-app/main/default/objects/Opportunity/fields/Recommended_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action_Plan__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Recommended Action Plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Tool</fullName>
            </value>
            <value>
                <fullName>Push Back Ship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>