force-app/main/default/objects/Opportunity/fields/Recommended_Models__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Models__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Recommended Models</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model 1</fullName>
            </value>
            <value>
                <fullName>Model 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>