force-app/main/default/objects/Opportunity/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase for Resale</fullName>
            </value>
            <value>
                <fullName>Purchase for Leasing</fullName>
            </value>
            <value>
                <fullName>Purchase for Employees</fullName>
            </value>
            <value>
                <fullName>Purchase for Users</fullName>
            </value>
            <value>
                <fullName>Purchase to Give Away</fullName>
            </value>
            <value>
                <fullName>Purchase for Clients</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>