force-app/main/default/objects/Opportunity/fields/Rizilient_Deal__c.field-meta.xml
<CustomField>
    <fullName>Rizilient_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rizilient Deal</label>
    <type>Checkbox</type>
</CustomField>