force-app/main/default/objects/Opportunity/fields/Seller_PK__c.field-meta.xml
<CustomField>
    <fullName>Seller_PK__c</fullName>
    <formula>IF (ISBLANK(Seller__c),&quot;&quot;,Seller__r.TECH_P_K__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller PK</label>
    <type>Text</type>
</CustomField>