force-app/main/default/objects/Opportunity/fields/Seller_price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Seller_price_per_unit__c</fullName>
    <label>Seller price per unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>