force-app/main/default/objects/Opportunity/fields/Service_Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Service_Back_Care__c</fullName>
    <businessOwnerUser>clement.vannicatte@backmarket.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Back Care</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Service__c.Business_Name__c</valueField>
        </filterItems>
        <filterItems>
            <field>Service__c.Service__c</field>
            <operation>equals</operation>
            <value>Back Care</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>