force-app/main/default/objects/Opportunity/fields/Targeted_Country_ies__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Country_ies__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Targeted Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeted_Country</valueSetName>
    </valueSet>
</CustomField>