force-app/main/default/objects/Opportunity/fields/Theoretical_Attachment_Rate_BS__c.field-meta.xml
<CustomField>
    <fullName>Theoretical_Attachment_Rate_BS__c</fullName>
    <label>Theoretical Attachment Rate BS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>