force-app/main/default/objects/Opportunity/fields/Total_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Products__c</fullName>
    <label>Total Opportunity Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>