force-app/main/default/objects/Opportunity/fields/X1st_order__c.field-meta.xml
<CustomField>
    <fullName>X1st_order__c</fullName>
    <label>1st order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>