force-app/main/default/objects/Opportunity/recordTypes/BM4B_Buying_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>BM4B_Buying_Opportunity</fullName>
    <active>true</active>
    <businessProcess>BM4B</businessProcess>
    <label>BM4B Buying Opportunity</label>
</RecordType>