force-app/main/default/objects/Opportunity/recordTypes/Partnership_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Partnership_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Partnership</businessProcess>
    <label>Partnership Opportunity</label>
</RecordType>