force-app/main/default/objects/Opportunity/recordTypes/Price_and_Selection.recordType-meta.xml
<RecordType>
    <fullName>Price_and_Selection</fullName>
    <active>false</active>
    <businessProcess>Price and Selection Opportunities</businessProcess>
    <description>Record type used for Deals and Selections related to the merchants.</description>
    <label>Price and Selection</label>
</RecordType>