force-app/main/default/objects/Opportunity/recordTypes/Service_and_Quality_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Service_and_Quality_Opportunities</fullName>
    <active>false</active>
    <businessProcess>Price and Selection Opportunities</businessProcess>
    <description>Used to track initiatives by the Service and Quality teams</description>
    <label>Service and Quality Opportunities</label>
</RecordType>