force-app/main/default/objects/Opportunity/recordTypes/Service_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Service_Opportunities</fullName>
    <active>true</active>
    <businessProcess>Supply Opportunities</businessProcess>
    <label>Service Opportunities</label>
</RecordType>