force-app/main/default/objects/Opportunity/recordTypes/Supply_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Supply_Opportunities</fullName>
    <active>true</active>
    <businessProcess>Supply Opportunities</businessProcess>
    <description>2021 Supply Opportunities</description>
    <label>Supply Opportunities</label>
</RecordType>