force-app/main/default/objects/Opportunity/validationRules/Prevent_CloseDate_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_CloseDate_Changes</fullName>
    <active>false</active>
    <description>Only System Administrators can change the CloseDate of the Opportunity.</description>
    <errorConditionFormula>AND(
ISCHANGED( CloseDate ),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>You can&apos;t change the Close Date of this Opportunity.</errorMessage>
</ValidationRule>