force-app/main/default/objects/Opportunity/validationRules/Require_Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Loss_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( StageName ,&quot;Closed Lost&quot;),
ISBLANK ( TEXT(Loss_Reason__c) ))</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please add loss reason to this opportunity.</errorMessage>
</ValidationRule>