force-app/main/default/objects/Opportunity/listViews/BM4B_Details.listView-meta.xml
<ListView>
    <fullName>BM4B_Details</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>P_K__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.QUANTITY</columns>
    <columns>Blocker__c</columns>
    <columns>Actual_GMV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.BM4B_Buying_Opportunity</value>
    </filters>
    <label>BM4B Details</label>
</ListView>