force-app/main/default/objects/Opportunity/listViews/Events.listView-meta.xml
<ListView>
    <fullName>Events</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>KPI_Issue__c</columns>
    <columns>KPI_Treshold__c</columns>
    <columns>Link_to_the_Source__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Supply_Opportunities</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Events</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Closed</value>
    </filters>
    <label>Events</label>
</ListView>