force-app/main/default/objects/Opportunity/listViews/My_Black_Friday_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Black_Friday_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Action__c</columns>
    <columns>Total_Opportunity_Products__c</columns>
    <columns>Opportunity_Products_KO__c</columns>
    <columns>Opportunity_Products_OK__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Black Friday</value>
    </filters>
    <label>My Black Friday Opportunities</label>
</ListView>