force-app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Action__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Opportunity_Products_KO__c</columns>
    <columns>Opportunity_Products_OK__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Opportunities</label>
</ListView>