force-app/main/default/objects/Opportunity/listViews/Opportunity_Alerts.listView-meta.xml
<ListView>
    <fullName>Opportunity_Alerts</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Link_to_the_Source__c</columns>
    <columns>Decrease_in__c</columns>
    <columns>Decrease_in_number__c</columns>
    <columns>KPI_Issue__c</columns>
    <columns>KPI_Treshold__c</columns>
    <columns>of_KPI_Contribution_in_the_SSM_Pool__c</columns>
    <columns>Team__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Supply_Opportunities</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Business Alerts</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Closed</value>
    </filters>
    <label>Business Alerts</label>
</ListView>