force-app/main/default/objects/Opportunity/listViews/Service_Opportunities.listView-meta.xml
<ListView>
    <fullName>Service_Opportunities</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Action__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Battleground Service Week,Service</value>
    </filters>
    <label>Service Opportunities</label>
</ListView>